--- a/conf/application.conf
+++ b/conf/application.conf
@@ -66,3 +66,5 @@ db {
 slick.dbs.default.driver="slick.driver.H2Driver$"
 slick.dbs.default.db.profile="org.h2.Driver"
 slick.dbs.default.db.url="jdbc:h2:mem:play;DB_CLOSE_DELAY=-1"
+
+play.filters.enabled += filters.TimeLoggingFilter
