added scheduler for a wipeout every 5 minutes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -68,3 +68,4 @@ slick.dbs.default.db.profile="org.h2.Driver"
 slick.dbs.default.db.url="jdbc:h2:mem:play;DB_CLOSE_DELAY=-1"
 
 play.filters.enabled += filters.TimeLoggingFilter
+play.modules.enabled += "modules.WipeoutModule"
