--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,3 +69,4 @@ slick.dbs.default.db.url="jdbc:h2:mem:play;DB_CLOSE_DELAY=-1"
 
 play.filters.enabled += filters.TimeLoggingFilter
 play.modules.enabled += "modules.WipeoutModule"
+play.modules.enabled += "modules.NewUserModule"
